force-app/main/default/objects/ProductionJournalRecord__c/ProductionJournalRecord__c.object-meta.xml
<CustomObject>
    <label>Production Journal Record</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Record ID Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Journal Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>