force-app/main/default/objects/ProductionJournalRecord__c/fields/ApprovedFact__c.field-meta.xml
<CustomField>
    <fullName>ApprovedFact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Fact</label>
    <type>Checkbox</type>
</CustomField>