force-app/main/default/objects/ProductionJournalRecord__c/fields/DispatchedQuantity__c.field-meta.xml
<CustomField>
    <fullName>DispatchedQuantity__c</fullName>
    <label>Dispatched (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>