force-app/main/default/objects/ProductionJournalRecord__c/fields/DispatchedQuantityNetto__c.field-meta.xml
<CustomField>
    <fullName>DispatchedQuantityNetto__c</fullName>
    <description>Weight (in metric tons) of dispatched products without coating.</description>
    <inlineHelpText>Weight (in metric tons) of dispatched products without coating.</inlineHelpText>
    <label>Dispatched Netto (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>