force-app/main/default/objects/ProductionJournalRecord__c/fields/KeyField__c.field-meta.xml
<CustomField>
    <fullName>KeyField__c</fullName>
    <formula>OrderItem__r.ID_ERP__c + &apos;|&apos; + Text(Year(Period__c)) + &apos;-&apos; + LPad(Text(Month(Period__c)), 2, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Field</label>
    <type>Text</type>
</CustomField>