force-app/main/default/objects/ProductionJournalRecord__c/fields/Margin_t__c.field-meta.xml
<CustomField>
    <fullName>Margin_t__c</fullName>
    <label>Margin (per t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>