force-app/main/default/objects/ProductionJournalRecord__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <formula>CASE(Type__c,
					&apos;Order&apos;, &apos;Order&apos;,
					&apos;Plan&apos;, &apos;Plan&apos;,
					&apos;Fact&apos;, if(ApprovedFact__c, &apos;Fact (Month, Approved)&apos;, if (WholeMonthFact__c, &apos;Fact (Month, Not Approved)&apos;, &apos;Fact (Interim)&apos;)),
					&apos;Balance&apos;, &apos;Balance&apos;,
					&apos;Unknown&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>