force-app/main/default/objects/ProductionJournalRecord__c/fields/ShippedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ShippedQuantity__c</fullName>
    <label>Shipped (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>