force-app/main/default/objects/ProductionJournalRecord__c/fields/ShippedQuantityNetto__c.field-meta.xml
<CustomField>
    <fullName>ShippedQuantityNetto__c</fullName>
    <description>Weight (in metric tons) of shipped products without coating.</description>
    <inlineHelpText>Weight (in metric tons) of shipped products without coating.</inlineHelpText>
    <label>Shipped Netto (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>