force-app/main/default/objects/ProductionJournalRecord__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>Fact</fullName>
            </value>
            <value>
                <fullName>Balance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>