force-app/main/default/objects/ProductionJournalRecord__c/fields/WholeMonthFact__c.field-meta.xml
<CustomField>
    <fullName>WholeMonthFact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Whole Month Fact</label>
    <type>Checkbox</type>
</CustomField>