force-app/main/default/objects/ProductionJournalRecord__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>DispatchedQuantity__c</columns>
    <columns>DispatchedQuantityNetto__c</columns>
    <columns>ExchangeTimeStamp__c</columns>
    <columns>KeyField__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Margin__c</columns>
    <columns>Margin_t__c</columns>
    <columns>Order__c</columns>
    <columns>OrderItem__c</columns>
    <columns>Period__c</columns>
    <columns>Type__c</columns>
    <columns>WholeMonthFact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2023 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>